# Flick

./: .gitignore  LICENSE  README.md  components.json  latest.json  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/fonts/: fonts.css
src/assets/fonts/roboto-mono/: roboto-mono.css
src/components/: Titlebar.tsx  aboutDialog.tsx  codeEditor.tsx  layout.tsx  settingsSheet.tsx  text.tsx  theme-toggle.tsx  updateDialog.tsx
src/components/editor/: EditorGutter.tsx  EditorHandlers.ts  EditorLanguageSelector.tsx  EditorStatusIndicator.tsx
src/components/shadcn/: alert-dialog.tsx  calendar.tsx  command.tsx  dialog.tsx  form.tsx  scroll-area.tsx  sheet.tsx  sidebar.tsx  switch.tsx  tooltip.tsx
src/contexts/: FlickContext.tsx  Providers.tsx  SettingsContext.tsx  TabsContext.tsx
src/hooks/: useDisclosure.ts
src/lib/: codeFormatter.ts  editorStyles.ts  utils.ts
